add more vehicle signals

--- a/car-lib/CarGearViewerKotlin/automotive/src/main/res/values/strings.xml
+++ b/car-lib/CarGearViewerKotlin/automotive/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
 
     <!-- MainActivity -->
     <string name="main_current_gear">Current Gear:</string>
+    <string name="main_ignition_state">Ignition State:</string>
+    <string name="main_parking_brake">Parking Brake:</string>
+    <string name="main_night_mode">Night Mode:</string>
 </resources>
